module12/istio/4.sidecar/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sidecar
spec:
  hosts:
    - nginx
  http:
    - match:
        - port: 80
      route: #路由规则的名称 会被 istiod 解析 生成envoy 的规则 listener route cluster endpoint 
        - destination:
            host: nginx
            port:
              number: 80

              # XDS extended discover service
